fixed contrast issues

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: rgb(255, 253, 253);
+  background-color: white;
   margin: 0;
   padding: 0;
 }
